--- a/Cyber_Commands.ipynb
+++ b/Cyber_Commands.ipynb
@@ -7574,7 +7574,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9bj0Nihl8VXR",
-        "outputId": "f14a7a81-33a8-46b6-ba5c-eb4a85336e26"
+        "outputId": "cb4804a0-7be8-4b22-cda3-4c0e93eaebb7"
       },
       "source": [
         "!pip install -U -q \"google\"\n",
@@ -7595,7 +7595,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.3/45.3 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.7/159.7 kB\u001b[0m \u001b[31m12.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hMounted at /content/drive\n"
           ]
         }
       ]
